--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "array-move": "^3.0.1",
     "contentful-ui-extensions-sdk": "^3.31.0",
     "cross-env": "^7.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-sortable-hoc": "^1.11.0",
     "typescript": "^4.1.3"
   },
   "scripts": {
